--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,18 +12,22 @@
             <div id="letter">
               <h1>{{title}}</h1>
               <h3>Dear {{visitor.name}},</h3>
-              <p>I wanted to thank you for the opportunity to interview for the Javascript Developer Position <br/> at
-                <strong>Stragetic Capital Advisory Services</strong>. <br/>To illustrate both my interest in the position and skills, I began learning AngularJS
-                over the weekend.<br/> This quick application was built using Angular, Javascript, HTML, & CSS. <br/>
-                  <br/>
-                Thank you again for your consideration!
-                  <br/>
+              <h3>Thank you for taking the time to speak with me and check out my applications. <br/>
+                I built this little application using AngularJS, Javscript, HTML, & CSS to showcase <br/>
+                my eagerness to continue developing my skills and gain experience in programming. <br/>
+                I look forward to connecting again in the future! <br/>
+                <br/>
+                Please take a copy of my resume & business card!<br/>
+                <br/>
                 Best, <br/>
                 Amanda Joan
+              </h3>
                 <br/>
                 <br/>
                 <a href="http://www.amandajoan.codes/" target="_blank">Click to Review my Portfolio</a> <br/>
                 <a href="/">Reload Page</a>
+                <br/>
+
             </div>
 
 
